--- a/store/blocks/desktop/components/header/header-section-middle.jsonc
+++ b/store/blocks/desktop/components/header/header-section-middle.jsonc
@@ -37,6 +37,7 @@
     }
   },
   "icon#desktop__header--icon-repurchase": {
+    "title": "icon-header-repurchase",
     "props": {
       "id": "header-repurchase", 
       "size": 20, 
