--- a/store/blocks/mobile/components/header/header-section-middle.jsonc
+++ b/store/blocks/mobile/components/header/header-section-middle.jsonc
@@ -3,7 +3,6 @@
     "title": "Header middle", 
     "children": [
         "logo#mobile__header--logo",
-        // "flex-layout.row#mobile__header--middle-animals",
         "image#mobile__header--menu-dog",
         "image#mobile__header--menu-cat",
         "login#mobile__header--login",
@@ -23,17 +22,6 @@
       "href": "/"
     }
   },
-  // "flex-layout.row#mobile__header--middle-animals": {
-  //   "title": "animals menu section", 
-  //   "children": [
-  //       "image#mobile__header--menu-dog", 
-  //       "image#mobile__header--menu-cat" 
-  //   ],
-  //   "props": {
-  //       "blockClass":"mobile__header--middle-animals", 
-  //       "horizontalAlign": "center"
-  //   }
-  // },
     "image#mobile__header--menu-dog": {
         "title": "Cat image - Mobile menu",
         "props": {
@@ -50,6 +38,7 @@
         }
     },
   "login#mobile__header--login": {
+    "title": "login",
     "props": {
       "emailAndPasswordTitle": "LOG-IN",
       "accessCodeTitle": "Acess Code LOG-IN",
@@ -61,6 +50,7 @@
     }
   }, 
   "drawer#mobile__header--menu": {
+    "title": "menu-drawer",
     "children": [
       "menu#header__menu"
     ],
@@ -72,6 +62,7 @@
     }
   },
     "menu#header__menu": {
+      "title": "header-menu-mobile",
       "children": [
         "menu-item#department__one",
         "menu-item#department__two", 
@@ -99,7 +90,7 @@
       }
     },
     "link#category__contact": {
-      "title": "category-beds--item-one", 
+      "title": "category-contact", 
       "props": {
         "blockClass": "items__menu--mobile", 
         "href": "/",
@@ -107,7 +98,7 @@
       }
     },
     "link#category__questions": {
-      "title": "category-beds--item-one", 
+      "title": "category-questions", 
       "props": {
         "blockClass": "items__menu--mobile", 
         "href": "/",
